<resources>
    <string name="app_name">Homework_7</string>
    <string name="item_screen">Item screen</string>
    <string name="item_1_bar">Item #1</string>
    <string name="item_2_bar">Item #2</string>
    <string name="item_3_bar">Item #3</string>
    <string name="item_1_text">The Command Palette holds infrequently used functionality, like
        sorting, changing the syntax and changing the indentation settings. With just a few
        keystrokes, you can search for what you want, without ever having to navigate through the
        menus or remember obscure key bindings.</string>
    <string name="item_2_text">When you need to focus, Distraction Free Mode is there to help you
        out. Distraction Free Mode is full screen, chrome free editing, with nothing but your text
        in the center of the screen. You can incrementally show elements of the UI, such as tabs
        and the find panel, as you need them.</string>
    <string name="item_3_text">Projects in Sublime Text capture the full contents of the workspace,
        including modified and unsaved files. You can switch between projects in a manner similar
        to Goto Anything, and the switch is instant, with no save prompts - all your modifications
        will be restored next time the project is opened.</string>
    <string name="ab_item1">Item #1</string>
    <string name="ab_item2">Item #2</string>
    <string name="ab_item3">Item #3</string>
    <string name="popup_new_window">Show in new window</string>
    <string name="popup_show_toast">Show in Toast</string>
    <string name="popup_close">Close app</string>
</resources>
